@@ -1,11 +1,13 @@
 #include "state.ih"
 
-// If there are any reducible items, SR or RR conflicts may be observed.
+// If there are reducible items, SR or RR conflicts may be observed.
 
-// To check for SR conflict, pass each reducible item index together with the
-// context consisting of the state's d_itemVector vector and d_nextVector
-// vector to Next's checkShiftReduceConflict member which will solve all
-// observed shift-reduce conflicts.
+// To check for SR conflicts, each reducible item index together with the
+// context (consisting of the state's d_itemVector vector and d_nextVector
+// vector) is passed to Next's checkShiftReduceConflict member which solves
+// the observed shift-reduce conflicts.
+
+// called by: State::define()
 
 void State::checkConflicts()
 {
@@ -28,6 +30,8 @@ void State::checkConflicts()
 
     d_srConflict.removeReductions(d_itemVector); 
 
+
+
     d_rrConflict.inspect();               // detect RR conflicts
 
     d_rrConflict.removeConflicts(d_itemVector);
@@ -35,3 +39,9 @@ void State::checkConflicts()
     if (d_reducible.size() > 1)             // more than 1 reduction
         d_stateType.setType(StateType::REQ_TOKEN);
 }
+
+
+
+
+
+
